@@ -2070,18 +2070,8 @@ unsigned char *parsens(unsigned char *s, off_t *skip, off_t *amnt)
 	for (x = sLEN(n) - 1; x > 0 && ((n[x] >= '0' && n[x] <= '9') || n[x] == 'x' || n[x] == 'X'); --x) ;
 	if (n[x] == ',') {
 		n[x] = 0;
-		if (n[x + 1] == 'x' || n[x + 1] == 'X')
-			sscanf((char *)(n + x + 2), "%llx", skip);
-		else if (n[x + 1] == '0' && (n[x + 2] == 'x' || n[x + 2] == 'X'))
-			sscanf((char *)(n + x + 3), "%llx", skip);
-		else if (n[x + 1] == '0')
-			sscanf((char *)(n + x + 1), "%llo", skip);
-		else
-			sscanf((char *)(n + x + 1), "%lld", skip);
-		for (--x; x > 0 && ((n[x] >= '0' && n[x] <= '9') || n[x] == 'x' || n[x] == 'X'); --x) ;
-		if (n[x] == ',') {
-			n[x] = 0;
-			*amnt = *skip;
+
+		if (sizeof(off_t) > 4) {
 			if (n[x + 1] == 'x' || n[x + 1] == 'X')
 				sscanf((char *)(n + x + 2), "%llx", skip);
 			else if (n[x + 1] == '0' && (n[x + 2] == 'x' || n[x + 2] == 'X'))
@@ -2090,6 +2080,40 @@ unsigned char *parsens(unsigned char *s, off_t *skip, off_t *amnt)
 				sscanf((char *)(n + x + 1), "%llo", skip);
 			else
 				sscanf((char *)(n + x + 1), "%lld", skip);
+		} else {
+			if (n[x + 1] == 'x' || n[x + 1] == 'X')
+				sscanf((char *)(n + x + 2), "%lx", skip);
+			else if (n[x + 1] == '0' && (n[x + 2] == 'x' || n[x + 2] == 'X'))
+				sscanf((char *)(n + x + 3), "%lx", skip);
+			else if (n[x + 1] == '0')
+				sscanf((char *)(n + x + 1), "%lo", skip);
+			else
+				sscanf((char *)(n + x + 1), "%ld", skip);
+		}
+
+		for (--x; x > 0 && ((n[x] >= '0' && n[x] <= '9') || n[x] == 'x' || n[x] == 'X'); --x) ;
+		if (n[x] == ',') {
+			n[x] = 0;
+			*amnt = *skip;
+			if (sizeof(off_t) > 4) {
+				if (n[x + 1] == 'x' || n[x + 1] == 'X')
+					sscanf((char *)(n + x + 2), "%llx", skip);
+				else if (n[x + 1] == '0' && (n[x + 2] == 'x' || n[x + 2] == 'X'))
+					sscanf((char *)(n + x + 3), "%llx", skip);
+				else if (n[x + 1] == '0')
+					sscanf((char *)(n + x + 1), "%llo", skip);
+				else
+					sscanf((char *)(n + x + 1), "%lld", skip);
+			} else {
+				if (n[x + 1] == 'x' || n[x + 1] == 'X')
+					sscanf((char *)(n + x + 2), "%lx", skip);
+				else if (n[x + 1] == '0' && (n[x + 2] == 'x' || n[x + 2] == 'X'))
+					sscanf((char *)(n + x + 3), "%lx", skip);
+				else if (n[x + 1] == '0')
+					sscanf((char *)(n + x + 1), "%lo", skip);
+				else
+					sscanf((char *)(n + x + 1), "%ld", skip);
+			}
 		}
 	}
 	/* Don't do this here: do it in prompt buffer instead, so we're just like
