@@ -1,4 +1,3 @@
-ls
 # JOE syntax highlight file for Python
 
 # TODO:
