@@ -1,3 +1,7 @@
+Thu Jun 15 14:17:03 EDT 2006
+
+	Add built-in joerc file.
+
 Sat Jun 10 10:06:41 EST 2006
 
 	Fix menu bug: coredump on left arrow.
